--- a/requirements.txt
+++ b/requirements.txt
@@ -1,297 +1,1 @@
-absl-py==1.4.0
-adafruit-ampy==1.1.0
-aerich==0.7.2
-aiodns==3.2.0
-aiohttp==3.9.1
-aiohttp-cors==0.7.0
-aiohttp-sse-client==0.2.1
-aiosignal==1.3.1
-aiosqlite==0.17.0
-altair==5.3.0
-annotated-types==0.7.0
-ansicon==1.89.0
-anyio==4.3.0
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-Arpeggio==2.0.2
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-exit-stack==1.0.1
-async-lru==2.0.4
-async-timeout==4.0.3
-asyncio==3.4.3
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-bitarray==3.0.0
-bleach==6.1.0
-blessed==1.20.0
-blinker==1.7.0
-cachetools==5.3.2
-ccxt==4.3.67
-certifi==2020.12.5
-cffi==1.16.0
-charset-normalizer==3.3.2
-chart-studio==1.1.0
-ckzg==2.0.1
-click==8.1.7
-colorama==0.4.6
-coloredlogs==15.0.1
-colorful==0.5.6
-colorlover==0.3.0
-comm==0.2.1
-configparser==6.0.0
-contourpy==1.2.1
-cryptography==43.0.0
-cufflinks==0.17.3
-cycler==0.12.1
-cytoolz==1.0.0
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dictdiffer==0.9.0
-distlib==0.3.9
-disutils==1.4.32.post2
-dm-tree==0.1.8
-dnspython==2.7.0
-dpath==2.2.0
-et-xmlfile==1.1.0
-eth-account==0.13.4
-eth-hash==0.7.0
-eth-keyfile==0.8.1
-eth-keys==0.6.0
-eth-rlp==2.1.0
-eth-typing==5.0.1
-eth-utils==5.1.0
-eth_abi==5.1.0
-exceptiongroup==1.2.0
-executing==2.0.1
-fastjsonschema==2.19.1
-filelock==3.13.1
-flatbuffers==24.12.23
-fonttools==4.50.0
-fqdn==1.5.1
-frozendict==2.4.1
-frozenlist==1.4.1
-fsspec==2024.2.0
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-golem-api-python==0.1.1
-golem-core==0.7.8
-golem-node==0.16.0
-google-api-core==2.23.0
-google-auth==2.26.2
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-googleapis-common-protos==1.66.0
-gpustat==1.1.1
-grpcio==1.60.0
-h11==0.14.0
-h5py==3.12.1
-hexbytes==1.2.1
-html5lib==1.1
-httpcore==1.0.5
-httpx==0.27.0
-humanfriendly==10.0
-humanize==4.11.0
-idna==3.6
-importlib-metadata==7.0.1
-importlib_resources==6.4.0
-ipykernel==6.29.3
-ipython==8.18.1
-ipywidgets==8.1.2
-iso8601==1.1.0
-isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.3
-jinxed==1.3.0
-joblib==1.3.2
-json5==0.9.24
-jsonpointer==2.4
-jsonrpc-base==1.1.0
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.4
-jupyter-on-golem==0.1.3
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.13.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.10
-keras==3.7.0
-kiwisolver==1.4.5
-libclang==16.0.6
-lxml==5.2.1
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.4
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-metatrader==0.0.1
-MetaTrader5==5.0.4200
-mistune==3.0.2
-ml-dtypes==0.4.1
-mplfinance==0.12.10b0
-mpmath==1.3.0
-mpremote==1.24.1
-msgpack==1.1.0
-multidict==6.0.4
-multitasking==0.0.11
-namex==0.0.7
-nbclient==0.10.0
-nbconvert==7.16.3
-nbformat==5.10.4
-nbimporter==0.3.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==1.26.4
-nvidia-ml-py==12.560.30
-oauthlib==3.2.2
-onnx==1.17.0
-onnxconverter-common==1.14.0
-onnxruntime==1.19.2
-opencensus==0.11.4
-opencensus-context==0.1.3
-openpyxl==3.1.2
-opt-einsum==3.3.0
-optree==0.11.0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandas-datareader==0.10.0
-pandocfilters==1.5.1
-parsimonious==0.10.0
-parso==0.8.3
-patsy==1.0.1
-peewee==3.17.1
-pillow==10.3.0
-platformdirs==4.2.0
-plotly==5.24.1
-prettytable==3.12.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-proto-plus==1.25.0
-protobuf==3.20.3
-psutil==5.9.8
-pure-eval==0.2.2
-py-spy==0.4.0
-pyarrow==18.1.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycares==4.4.0
-pycparser==2.22
-pycryptodome==3.21.0
-pydantic==1.10.19
-pydantic_core==2.27.1
-pydeck==0.8.1b0
-Pygments==2.17.2
-pyparsing==3.1.2
-pypika-tortoise==0.1.6
-pyreadline==2.1
-pyreadline3==3.5.4
-pyserial==3.5
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-statemachine==0.8.0
-pytimeparse==1.1.8
-pytz==2024.2
-pyudev==0.24.3
-pyunormalize==16.0.0
-pywin32==306
-pywinpty==2.0.13
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.6.1
-QtPy==2.4.1
-ray==2.9.3
-referencing==0.34.0
-regex==2024.11.6
-requests==2.31.0
-requests-oauthlib==1.3.1
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rlp==4.0.1
-rpds-py==0.18.0
-rsa==4.9
-rshell==0.0.36
-scikit-learn==1.6.0
-scipy==1.13.1
-seaborn==0.13.2
-seasonal==0.3.1
-semantic-version==2.10.0
-Send2Trash==1.8.2
-six==1.17.0
-skl2onnx==1.18.0
-smart-open==7.0.5
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-srvresolver==0.3.5
-stack-data==0.6.3
-statsmodels==0.14.4
-streamlit==1.42.0
-sympy==1.12
-ta==0.11.0
-tenacity==8.2.3
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow-model-optimization==0.8.0
-tensorflow_intel==2.18.0
-termcolor==2.4.0
-terminado==0.18.1
-textX==3.1.1
-tf_keras==2.18.0
-threadpoolctl==3.4.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.13.2
-toolz==0.12.1
-torch==2.4.1+cu124
-torchaudio==2.4.1+cu124
-torchvision==0.19.1+cu124
-tornado==6.4
-tortoise-orm==0.20.0
-traitlets==5.14.1
-types-python-dateutil==2.9.0.20240316
-types-requests==2.32.0.20241016
-typing_extensions==4.12.2
-tzdata==2024.2
-uri-template==1.3.0
-urllib3==2.1.0
-virtualenv==20.28.0
-watchdog==4.0.0
-wcwidth==0.2.13
-web3==7.6.0
-webcolors==1.13
-webencodings==0.5.1
-websocat==1.13.0
-websocket-client==1.7.0
-websockets==10.4
-Werkzeug==3.0.1
-widgetsnbextension==4.0.10
-wrapt==1.14.1
-ya-aioclient==0.6.4
-yapapi==0.12.0
-yarl==1.9.4
-yfinance==0.2.48
-zipp==3.17.0
+yfinance
